--- a/_includes/pub-item.html
+++ b/_includes/pub-item.html
@@ -7,7 +7,7 @@
         <span class="pub-title">  {{ publication.title }}.</span>
         <span class="pub-booktitle">  {{ publication.booktitle }}.</span>
         {% if publication.award %}
-        {{publication.award }}
+        <span class="pub-award">({{publication.award }})</span>
         {% endif %}
         
     </div>
