--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -39,7 +39,8 @@ body {
     color: darkslategray;
     font-family: 'Montserrat', sans-serif;
     font-size: medium;
-    width:60%;
+    width: 800px;
+    min-width: 80%;
     margin: auto;
 }
 
